# ngengine

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  readme.md
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindOpenGLES.cmake  GitGetRevisionDescription.cmake
doc/: events.md  index.html  logging.md  scripting.md
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
source/include/NGE/Actors/: Actor.hpp  ActorComponenet.hpp  ActorFactory.hpp  ActorInterfaces.hpp
source/include/NGE/Appearance/: Light.hpp  Material.hpp
source/include/NGE/Appearance/Scene/: Animation.hpp  MeshAnim.hpp  MeshKey.hpp  NodeAnim.hpp  Scene.hpp  SceneNode.hpp
source/include/NGE/Core/: ConcurrentQueue.hpp  Core.hpp  Delegate.hpp  GenericObjectFactory.hpp  Process.hpp  ProcessManager.hpp  Settings.hpp.in  Singleton.hpp  XMLSettings.hpp
source/include/NGE/Events/: AbstractEventBus.hpp  BaseEventData.hpp  EventBus.hpp  EventDelegate.hpp  EventManager.hpp  Events.hpp  EventsTypes.hpp  GUIEventListener.hpp  IEventData.hpp  IEventManager.hpp  KeyboardEvent.hpp  MouseEvent.hpp  TouchEvent.hpp
source/include/NGE/GUI/: GUI.hpp  GUIAlphaElement.hpp  GUIButton.hpp  GUIClippedRectangle.hpp  GUIEvent.hpp  GUIFont.hpp  GUIFrame.hpp  GUILabel.hpp  GUIPanel.hpp  GUIRectangle.hpp  GUISeparator.hpp  GUITexCoordDescriptor.hpp  GUIText.hpp  GUITextBox.hpp  GUITypes.hpp
source/include/NGE/Geometry/: Bone.hpp  DistanceObject.hpp  Face.hpp  Mesh.hpp  Ray.hpp  VertexWeight.hpp
source/include/NGE/Geometry/Basic/: Basic.hpp  Box.hpp  Floor.hpp  Plane.hpp  Sphere.hpp
source/include/NGE/Geometry/Models/: ColladaModel.hpp  XModel.hpp
source/include/NGE/Geometry/Nature/: DiamonSquareTerrain.hpp  SkyColor.hpp  SkyDome.hpp  SkyPlane.hpp  Terrain.hpp  WaterTexture.hpp
source/include/NGE/Geometry/Skeleton/: Skeleton.hpp  SkeletonNode.hpp  SkinnedMesh.hpp
source/include/NGE/Input/: SoftwareMouse.h  SoftwareMouse.hpp
source/include/NGE/Math/: Math.hpp  MathUtils.hpp  Matrix3.hpp  Matrix4.hpp  MinSphere3.hpp  NumberConverter.hpp  NumberConverter.inc  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
source/include/NGE/Math/Algorithms/: Sort.h
source/include/NGE/Math/Objects3D/: AABox.hpp  AABox.inc  Plane.hpp  Plane.inc  Sphere.hpp  Sphere.inc
source/include/NGE/Math/Types/: QuaternionKey.hpp  QuaternionKey.inc  Vector3Key.hpp  Vector3Key.inc
source/include/NGE/Media/: Media.hpp  MediaManager.hpp  MediaPathManager.hpp
source/include/NGE/Media/Files/: File.hpp
source/include/NGE/Media/Fonts/: FontManager.hpp  FreeTypeFont.hpp  TextureMappedFont.hpp
source/include/NGE/Media/Images/: GetTextureEvent.hpp  Image.hpp  JpegImage.hpp  LoadTextureEvent.hpp  PngImage.hpp  TargaImage.hpp  Texture.hpp  TextureManager.hpp
source/include/NGE/Parsers/: ParsingUtils.hpp  StringUtils.hpp  pugixml.hpp
source/include/NGE/Rendering/: MatrixStack.hpp  Renderer.hpp  Rendering.hpp
source/include/NGE/Scripting/: IScriptManager.hpp  LuaScriptEvent.hpp  LuaScriptEventListener.hpp  LuaScriptEventListenerManager.hpp  LuaScriptExports.hpp  LuaScriptManager.hpp  LuaScriptProcess.hpp  LuaSharedObject.hpp  ScriptManager.hpp
source/include/NGE/ThirdPart/: android_native_app_glue.h  android_native_app_glue.hpp
source/include/NGE/Tools/: GLError.hpp  Logger.hpp  NewLogger.hpp  Random.hpp  Settings.hpp  Timing.hpp  Tools.hpp
source/include/NGE/Windows/: AbstractWindow.hpp  AndroidWindow.hpp  Application.hpp  D3DWindow.hpp  GLFW3Window.hpp  Window.hpp  Windows.hpp
source/src/NGE/Actors/: Actor.cpp  ActorComponenet.cpp
source/src/NGE/Appearance/: Light.cpp
source/src/NGE/Core/: Process.cpp  ProcessManager.cpp
source/src/NGE/Events/: EventBus.cpp  EventDelegate.cpp  EventManager.cpp  IEventManager.cpp  KeyboardEvent.cpp  MouseEvent.cpp  TouchEvent.cpp
source/src/NGE/GUI/: GUIAlphaElement.cpp  GUIButton.cpp  GUIClippedRectangle.cpp  GUIEvent.cpp  GUIFrame.cpp  GUILabel.cpp  GUIPanel.cpp  GUIRectangle.cpp  GUISeparator.cpp  GUITexCoordDescriptor.cpp  GUIText.cpp  GUITextBox.cpp
source/src/NGE/Geometry/: Face.cpp  Mesh.cpp  Ray.cpp
source/src/NGE/Input/: SoftwareMouse.cpp
source/src/NGE/Math/: MathUtils.cpp  NumberConverter.cpp
source/src/NGE/Media/: MediaManager.cpp  MediaPathManager.cpp
source/src/NGE/Parsers/: pugixml.cpp
source/src/NGE/Rendering/: Renderer.cpp
source/src/NGE/Scripting/: LuaScriptEvent.cpp  LuaScriptEventListener.cpp  LuaScriptEventListenerManager.cpp  LuaScriptExports.cpp  LuaScriptManager.cpp  LuaScriptProcess.cpp
source/src/NGE/ThirdPart/: android_native_app_glue.c  android_native_app_glue.cpp
source/src/NGE/Tools/: Logger.cpp  Random.cpp  Timing.cpp
source/src/NGE/Windows/: AndroidWindow.cpp  Application.cpp  D3DWindow.cpp  GLFW3Window.cpp
test/: CMakeLists.txt  ConcurrentQueueTest.cpp  DelegateTest.cpp  EventManagerTest.cpp  LuaScriptManagerTest.cpp  LuaScriptProcessTest.cpp  Main.cpp  ProcessTest.cpp  SeleneTest.cpp  TestMakeLists.cmake  TestMakeLists.txt  TestSettings.cpp  TestSettings.hpp.in
test/Actors/: ActorTest.cpp
test/Core/: ConcurrentQueueTest.cpp  DelegateTest.cpp  GenericObjectFactoryTest.cpp  ProcessManagerTest.cpp  ProcessTest.cpp
test/Data/: test.lua
test/Data/Scripting/: build-event-data.lua  events.lua  ngengine-lib.lua  register-class.lua  register-listner-for-event.lua  send-event-from-script-and-catch-in-another.lua
test/Events/: EventDelegateTest.cpp  EventManagerTest.cpp
test/Math/: Matrix4Test.cpp
test/Media/: MediaManagerTest.cpp
test/Media/Images/: TextureManagerTest.cpp
test/Misc/: Misc.cpp
test/Parsers/: StringUtilsTest.cpp
test/Scripting/: LuaScriptEventListenerManagerTest.cpp  LuaScriptEventListenerTest.cpp  LuaScriptEventTest.cpp  LuaScriptExportsTest.cpp  LuaScriptManagerTest.cpp  LuaScriptProcessTest.cpp
test/Tools/: LoggerTest.cpp  NewLoggerTest.cpp  TimingTest.cpp
test/data/: closureBaseObject.lua  function.lua  function_as_argument.lua  lib.lua  lib2.lua  registering_class_variables.lua  registering_classes.lua  script_process.lua
(+109 files in other folders)
